--- a/ecom/apps/store/templates/parts/product_list.html
+++ b/ecom/apps/store/templates/parts/product_list.html
@@ -4,8 +4,8 @@
             <div class="card">
                 <div class="card-image">
                     <figure class="image">
-                        {% if product.thumbnail.url %}
-                            <img src="{{ product.thumbnail.url }}">
+                        {% if product.get_thumbnail %}
+                            <img src="{{ product.get_thumbnail }}">
                         {% endif %}
                     </figure>
                 </div>
