--- a/ecom/apps/store/templates/product_detail.html
+++ b/ecom/apps/store/templates/product_detail.html
@@ -120,10 +120,18 @@
                 {% endif %}
             {% endif %}
         {% endif %}
+        
+        <br>
 
         <article class="message is-success" v-if="showMessage">
             <div class="message-body">
                 The product was added to the cart!
+            </div>
+        </article>
+
+        <article class="message is-danger" v-if="showError">
+            <div class="message-body">
+                The product is out of stock!
             </div>
         </article>
 
@@ -199,6 +207,7 @@
             return {
                 related_products: '{{ related_products }}',
                 showMessage: false,
+                showError: false,
                 mainImage: '{{ product.image.url }}',
                 images: [{{ imagesstring|safe }}],
                 num_available: '{{ product }},'
@@ -221,12 +230,21 @@
                     body: JSON.stringify(data)
                 })
                 .then((response) => {
-                    console.log('response ', response )
-                    this.showMessage = true
-                    store.commit('increment', 1)
-                    setTimeout(() => {
+                    if (response.status == 200) {
+                        this.showError = false
+                        this.showMessage = true
+                        store.commit('increment', 1)
+                        setTimeout(() => {
+                            this.showMessage = false
+                        }, 2000)
+                    } else {
                         this.showMessage = false
-                    }, 2000)
+                        this.showError = true
+                        setTimeout(() => {
+                            this.showError = false
+                        }, 2000)
+                    }
+                    
                 })
                 .catch((error) => {
                     console.log('Error ', error )
