--- a/ecom/apps/store/templates/store_detail.html
+++ b/ecom/apps/store/templates/store_detail.html
@@ -8,18 +8,18 @@
     {% with products as store.products %}
         {% include "parts/product_list.html" %}
     {% endwith %}
-
-    {% comment %} {% if category.children.all %}
+    
+    {% if store.categories.children.all %}
         <hr>
         <h1 class="title">See products from other categories</h1>   
         <div class="columns is-multiline">
-            {% for subcategory in category.children.all %}
+            {% for subcategory in store.categories.children.all %}
                 <div class="column is-3">
                     <h2 class="subtitle">{{ subcategory.title }}</h2>
                     <a href="{% url 'category_detail' subcategory.slug %}">View products</a>
                 </div>
             {% endfor %}
         </div>
-    {% endif %} {% endcomment %}
+    {% endif %}
 
 {% endblock %}
