--- a/ecom/apps/store/templates/category_detail.html
+++ b/ecom/apps/store/templates/category_detail.html
@@ -22,14 +22,9 @@
     {% if category.children.all %}
         <hr>
         <h1 class="title">See products from other categories</h1>   
-        <div class="columns is-multiline">
-            {% for subcategory in category.children.all %}
-                <div class="column is-3">
-                    <h2 class="subtitle">{{ subcategory.title }}</h2>
-                    <a href="{% url 'category_detail' subcategory.slug %}">View products</a>
-                </div>
-            {% endfor %}
-        </div>
+        {% with category.children.all as categories %}
+            {% include "parts/category_list.html" %}
+        {% endwith %}
     {% endif %}
 
 {% endblock %}
