--- a/ecom/apps/userprofile/templates/signup.html
+++ b/ecom/apps/userprofile/templates/signup.html
@@ -11,7 +11,8 @@
 
                 {{ userprofileform.as_p }}
 
-                <div class="field">
+                <br>
+                <div class="field has-text-centered">
                     <div class="control">
                         <button class="button is-success">Sign up</button>
                     </div>
