--- a/ecom/apps/store/templates/parts/category_list.html
+++ b/ecom/apps/store/templates/parts/category_list.html
@@ -3,9 +3,9 @@
         <div class="column is-3">
             <div class="card">
                 <div class="card-image">
-                    <figure class="image">
-                        {% if category.get_thumbnail %}
-                            <img src="{{ category.get_thumbnail }}">
+                    <figure class="image is-3by2">
+                        {% if category.image %}
+                            <img src="{{ category.image.url }}">
                         {% endif %}
                     </figure>
                 </div>
@@ -25,7 +25,7 @@
 
                 <footer class="card-footer">
                     <a href="{% url 'category_detail' category.slug %}" 
-                        class="card-footer-item">View</a>
+                        class="card-footer-item button is-primary is-outlined">View</a>
                 </footer>
             </div>
         </div>
