create shop api request (not finished)

--- a/ecom/apps/store/templates/parts/store_list.html
+++ b/ecom/apps/store/templates/parts/store_list.html
@@ -17,7 +17,7 @@
             </div>
 
             <footer class="card-footer">
-                <a href="" 
+                <a href="{% url 'create_eshop' %}" 
                     class="card-footer-item button is-danger is-outlined">Create an e-shop now!</a>
             </footer>
         </div>
