--- a/ecom/apps/store/templates/product_detail.html
+++ b/ecom/apps/store/templates/product_detail.html
@@ -244,7 +244,10 @@
                             this.showError = false
                         }, 2000)
                     }
-                    
+                    return response.json()
+                })
+                .thend((data) => {
+                    console.log(data)
                 })
                 .catch((error) => {
                     console.log('Error ', error )
