fix is-multiple to is-multiline

--- a/ecom/apps/store/templates/parts/product_list.html
+++ b/ecom/apps/store/templates/parts/product_list.html
@@ -1,4 +1,4 @@
-<div class="columns is-multiple">
+<div class="columns is-multiline">
     {% for product in products %}
         <div class="column is-3">
             <div class="card">
