--- a/ecom/apps/store/templates/parts/category_list.html
+++ b/ecom/apps/store/templates/parts/category_list.html
@@ -1,4 +1,4 @@
-<div class="columns is-multiple">
+<div class="columns is-multiline">
     {% for category in categories %}
         <div class="column is-3">
             <div class="card">
